JSON object added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="contenedor-principal" class="w3-container">
       <div class="w3-panel w3-leftbar w3-pale-yellow w3-border-red">
-        <p class="w3-xxlarge w3-serif">
+        <p class="w3-xlarge w3-serif">
           <i id="frase"></i>
         </p>
         <p id="autor"></p>
