--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     </header>
 
     <div id="contenedor-principal" class="w3-container">
-      <div class="w3-panel w3-leftbar w3-pale-yellow w3-border-red">
+      <div
+        class="w3-panel w3-display-container w3-leftbar w3-pale-yellow w3-border-red"
+      >
         <p class="w3-xlarge w3-serif">
           <i id="frase"></i>
         </p>
         <p id="autor"></p>
+        <span
+          id="contador"
+          class="w3-badge w3-display-bottomright w3-margin w3-large w3-red"
+        ></span>
       </div>
     </div>
 
